--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "crland",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "main": "app.js",
   "scripts": {
     "start": "node --inspect app.js"
@@ -13,14 +13,18 @@
     "babel-register": "^6.26.0",
     "body-parser": "^1.17.2",
     "config": "^1.29.0",
+    "ioredis": "^3.2.2",
+    "jsdom": "^11.5.1",
     "koa": "^2.4.1",
     "koa-bodyparser": "^4.2.0",
     "koa-cors": "^0.0.16",
     "koa-mount": "^3.0.0",
     "koa-router": "^7.3.0",
+    "koa-session2": "^2.2.5",
     "log4js": "^2.4.1",
     "moment": "^2.18.1",
     "mongoose": "^4.11.7",
+    "node-schedule": "^1.3.0",
     "xlsx": "^0.11.4"
   }
 }
