--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,11 @@
 {
+  "plugins": ["transform-runtime"],
   "presets": [
     [
       "env",
       {
         "targets": {
-          "node": true
+          "node": "current"
         }
       }
     ]
