--- a/config/default.json5
+++ b/config/default.json5
@@ -9,6 +9,7 @@
     mongo: { 
       url: 'mongodb://127.0.0.1/frame',
     },
+    debug: true, // debug 为 true 时， 用于本地调式
     // redis 配置， 默认是本地
     redis: {
       host: '127.0.0.1',
