--- a/package.json
+++ b/package.json
@@ -1,53 +1,61 @@
 {
-  "name": "frame",
-  "version": "0.0.1",
-  "main": "app.js",
+  "name": "egg-example-confusion",
+  "version": "1.0.0",
+  "description": "使用egg.js打包混淆代码",
+  "private": true,
+  "egg": {
+    "typescript": true,
+    "declarations": true
+  },
   "scripts": {
-    "lint": "eslint .",
-    "format": "prettier-eslint --write *.js"
-  },
-  "author": "ls",
-  "license": "ISC",
-  "eslintConfig": {
-    "extends": [
-      "prettier"
-    ],
-    "plugins": [
-      "prettier"
-    ],
-    "rules": {
-      "prettier/prettier": "error"
-    }
-  },
-  "prettier": {
-    "singleQuote": true,
-    "semi": false
-  },
-  "devDependencies": {
-    "errorhandler": "^1.5.0",
-    "eslint-plugin-prettier": "^2.6.0",
-    "prettier-eslint": "^8.8.1",
-    "prettier-eslint-cli": "^4.7.1",
-    "response-time": "^2.3.2"
+    "start": "egg-scripts start --daemon --title=egg-server-egg-example-confusion",
+    "stop": "egg-scripts stop --title=egg-server-egg-example-confusion",
+    "dev": "egg-bin dev",
+    "debug": "egg-bin debug",
+    "test-local": "egg-bin test",
+    "test": "npm run lint -- --fix && npm run test-local",
+    "cov": "egg-bin cov",
+    "tsc": "ets && tsc -p tsconfig.json",
+    "ci": "npm run lint && npm run cov && npm run tsc",
+    "autod": "autod",
+    "lint": "eslint . --ext .ts",
+    "clean": "ets clean",
+    "build": "make build"
   },
   "dependencies": {
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.2",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-preset-stage-3": "^6.24.1",
-    "compression": "^1.7.1",
-    "config": "^1.29.4",
-    "connect-redis": "^3.3.3",
-    "cookie-parser": "^1.4.3",
-    "cors": "^2.8.4",
-    "eslint": "^4.18.1",
-    "express": "^4.16.2",
-    "express-session": "^1.15.6",
-    "log4js": "^2.5.2",
-    "mongoose": "^5.0.4"
-  }
+    "egg": "^2.6.1",
+    "egg-scripts": "^2.6.0"
+  },
+  "devDependencies": {
+    "@types/mocha": "^2.2.40",
+    "@types/node": "^7.0.12",
+    "@types/supertest": "^2.0.0",
+    "autod": "^3.0.1",
+    "autod-egg": "^1.1.0",
+    "egg-bin": "^4.11.0",
+    "egg-ci": "^1.8.0",
+    "egg-mock": "^3.16.0",
+    "eslint": "^6.7.2",
+    "eslint-config-egg": "^8.0.0",
+    "gulp": "^4.0.2",
+    "gulp-javascript-obfuscator": "^1.1.6",
+    "tslib": "^1.9.0",
+    "typescript": "^3.0.0",
+    "vinyl-sourcemaps-apply": "^0.2.1"
+  },
+  "engines": {
+    "node": ">=8.9.0"
+  },
+  "ci": {
+    "version": "8"
+  },
+  "repository": {
+    "type": "git",
+    "url": ""
+  },
+  "eslintIgnore": [
+    "coverage"
+  ],
+  "author": "ls",
+  "license": "MIT"
 }
